test/spec_vectors/table_set/fail/module_4.wat
(module (table $t 10 externref) (func $type-size-f32-vs-i32 (table.set $t (f32.const 1) (ref.null extern))))